# gene-classifier-ml

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Readme.md  config.yaml  constants.py  data_validator.py  environment.yml  experiment_tracker.py  logger.py  main.py  model_monitor.py  model_utils.py  predict.py  pyproject.toml  requirements.txt  train.py
.dvc/: config
.github/workflows/: ci.yml
tests/: __init__.py  test_model_utils.py  test_preprocessing.py
